--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     </head>
     <body>
         <nav>
-            
+            <h1>MIS HOBBIES</h1>
+            <ul>
+                <li class="colorMenu"> <a href="https://www.facebook.com/">Facebook</a> </li>
+                <li class="colorMenu"> <a href="https://www.instagram.com/?hl=es-la">Instagram</a> </li>
+
+            </ul>
         </nav>
         <footer>Altamirano Flores Yulith Vanessa 20 de Septiembre</footer>
         <div class="container">
