--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
 
             </ul>
         </nav>
-        <footer>Altamirano Flores Yulith Vanessa 20 de Septiembre</footer>
+        <footer>Altamirano Flores Yulith Vanessa, Matricula: 352738, 20 de Septiembre</footer>
         <div class="container">
-            <br><br><br><br>
+            <br><br><br><br><br><br>
+            <section>
+                <h2>Futbol</h2>
+                <img src="">
+            </section>
         </div>
     </body>
 </html>
