--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
                 <h2>Futbol</h2>
                 <img src="">
             </section>
+            <section>
+                <h2>Doramas</h2>
+
+            </section>
+            <section>
+                <h2>Musica</h2>
+            </section>
         </div>
     </body>
 </html>
