--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
             </ul>
         </nav>
-        <footer>Altamirano Flores Yulith Vanessa, Matricula: 352738, 20 de Septiembre</footer>
         <div class="container">
             <br><br><br><br><br><br>
             <section>
@@ -35,7 +34,11 @@
             <br>
             <section>
                 <h2>Musica</h2>
+                <audio>
+                    <p>Musica favorita</p>
+                </audio>
             </section>
-        </div>
+        </div><br><br><br>
+        <footer>Altamirano Flores Yulith Vanessa, Matricula: 352738, 20 de Septiembre</footer>
     </body>
 </html>
