--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <br>
             <section>
                 <h2>Musica</h2>
-                <audio>
+                <audio src="./musica/Christina Perri - A Thousand Years.ogg" controls autoplay loop>
                     <p>Musica favorita</p>
                 </audio>
             </section>
