--- a/index.html
+++ b/index.html
@@ -34,9 +34,12 @@
             <br>
             <section>
                 <h2>Musica</h2>
+                <h3>A thousand years</h3>
                 <audio src="./musica/Christina Perri - A Thousand Years.ogg" controls autoplay loop>
                     <p>Musica favorita</p>
                 </audio>
+                <br>
+                <h3>Presiento</h3>
                 <audio src="./musica/Morat, Aitana - Presiento.ogg" controls autoplay loop>
                 </audio>
             </section>
