--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
             <br><br><br><br><br><br>
             <section>
                 <h2>Futbol</h2>
+                <h4>El deporte que mas me gusta practicar es el futbol</h4>
                 <img src="./imagenes/imagen.jpg" class="img-thumbnail" alt="Responsive image">
                 <br><br>
             </section>
             <section>
                 <h2>Doramas</h2>
+                <h4>En mis tiempos libres me gusta ver mucho doramas</h4>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/PGsBC_MoJGY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <br><br>
             </section>
