--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             <br>
             <section>
                 <h2>Musica</h2>
+                <h4>Mi musica favorita es..</h4>
+                <br>
                 <h3>A thousand years</h3>
                 <audio src="./musica/Christina Perri - A Thousand Years.ogg" controls autoplay loop>
                     <p>Musica favorita</p>
@@ -46,6 +48,6 @@
                 </audio>
             </section>
         </div><br><br><br>
-        <footer>Altamirano Flores Yulith Vanessa, Matricula: 352738, 20 de Septiembre</footer>
+        <footer>Altamirano Flores Yulith Vanessa, Matricula: 352738, 20 de Septiembre del 2019</footer>
     </body>
 </html>
